syntax = "proto3";

package user;

import "google/protobuf/any.proto";

option go_package = "example/user;user";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {};
}

message GetUserRequest {
  string id = 1;
  int32 type = 2;
}

message GetUserResponse {
  User user = 1;
}

message GetUsersRequest {
  repeated string ids = 1;
}

message GetUsersResponse {
  repeated User users = 1;
}

message User {
  string id = 1;
  string name = 2;
  repeated Item items = 3;
  map<string, google.protobuf.Any> profile = 4;
  oneof attr {
    AttrA attr_a = 5;
    AttrB b = 6;
  }
  message AttrA {
    string foo = 1;
  }
  message AttrB {
    bool bar = 2;
  }
}

message Item {
  enum ItemType {
    ITEM_TYPE_UNSPECIFIED = 0;
    ITEM_TYPE_1 = 1;
    ITEM_TYPE_2 = 2;
    ITEM_TYPE_3 = 3;
  }
  message Location {
    string addr1 = 1;
    string addr2 = 2;
    oneof addr3 {
      AddrA addr_a = 3;
      AddrB b = 4;
      string c = 5;
    };
    message AddrA {
      string foo = 1;
    }
    message AddrB {
      int64 bar = 1;
    }
  }
  string name = 1;
  ItemType type = 2;
  int64 value = 3;
  Location location = 4;
}