syntax = "proto3";

package org.post;

option go_package = "example/post;post";

service PostService {
  rpc GetPost(GetPostRequest) returns (GetPostResponse) {};
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse) {};
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {};
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse) {};
}

message GetPostRequest {
  string id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message GetPostsRequest {
  repeated string ids = 1;
}

message GetPostsResponse {
  repeated Post posts = 1;
}

message CreatePostRequest {
  CreatePost post = 1;
}

message CreatePostResponse {
  Post post = 1;
}

enum PostType {
  POST_TYPE_UNKNOWN = 0;
  POST_TYPE_A = 1;
  POST_TYPE_B = 2;
}

message CreatePost {
  string title = 1;
  string content = 2;
  string user_id = 3;
  PostType type = 4;
  int32 post_type = 5;
}

message Post {
  string id = 1;
  string title = 2;
  string content = 3;
  string user_id = 4;
}

message UpdatePostRequest {
  string id = 1;
}

message UpdatePostResponse {
}